syntax = "proto2";

package sf.solana.block_meta.v1;

message PbApproveUseAuthorityArgsLayout {
  required string numberOfUses = 1;
}

message PbBurnArgsLayout {
  required string name = 1;
  required string amount = 2;
}

message PbCreatorLayout {
  required string address = 1;
  required bool verified = 2;
  required uint32 share = 3;
}

message PbCollectionLayout {
  required bool verified = 1;
  required string key = 2;
}

message PbUsesLayout {
  required string useMethod = 1;
  required string remaining = 2;
  required string total = 3;
}

message PbCollectionDetailsLayout {
  required string name = 1;
  required string size = 2;
}

message PbAssetDataLayout {
  required string name = 1;
  required string symbol = 2;
  required string uri = 3;
  required uint32 sellerFeeBasisPoints = 4;
  repeated PbCreatorLayout creators = 5;
  required bool primarySaleHappened = 6;
  required bool isMutable = 7;
  required string tokenStandard = 8;
  optional PbCollectionLayout collection = 9;
  optional PbUsesLayout uses = 10;
  optional PbCollectionDetailsLayout collectionDetails = 11;
  optional string ruleSet = 12;
}

message PbPrintSupplyLayout {
  required string name = 1;
  optional string val = 2;
}

message PbCreateArgsLayout {
  required string name = 1;
  required PbAssetDataLayout asset_data = 2;
  optional uint32 decimals = 3;
  optional PbPrintSupplyLayout print_supply = 4;
}

message PbCreateMasterEditionArgsLayout {
  optional string maxSupply = 1;
}

message PbDataLayout {
  required string name = 1;
  required string symbol = 2;
  required string uri = 3;
  required uint32 sellerFeeBasisPoints = 4;
  repeated PbCreatorLayout creators = 5;
}

message PbDataV2Layout {
  required string name = 1;
  required string symbol = 2;
  required string uri = 3;
  required uint32 sellerFeeBasisPoints = 4;
  repeated PbCreatorLayout creators = 5;
  optional PbCollectionLayout collection = 6;
  optional PbUsesLayout uses = 7;
}

message PbCreateMetadataAccountArgsLayout {
  required PbDataLayout data = 1;
  required bool isMutable = 2;
}

message PbCreateMetadataAccountArgsV2Layout {
  required PbDataV2Layout data = 1;
  required bool isMutable = 2;
}

message PbCreateMetadataAccountArgsV3Layout {
  required PbDataV2Layout data = 1;
  required bool isMutable = 2;
  optional PbCollectionDetailsLayout collectionDetails = 3;
}

message PbSeedsVecLayoutInner {
  repeated uint32 values = 1;
}

message PbSeedsVecLayout {
  repeated PbSeedsVecLayoutInner seeds = 1;
}

message PbLeafInfoLayout {
  repeated uint32 leaf = 1;
}

message PbPayloadTypeLayout {
  required string name = 1;
  optional string valPubKey = 2;
  optional PbSeedsVecLayout valSeedsVec = 3;
  optional PbLeafInfoLayout valLeafInfo = 4;
  optional string valInt64 = 5; 
}

message PbMapItemLayout {
  required string key = 1;
  required PbPayloadTypeLayout val = 2;
}

message PbPayloadLayout {
  repeated PbMapItemLayout map = 1;
}

message PbAuthorizationDataLayout {
  required PbPayloadLayout payload = 1;
}

message PbDelegateArgsLayout {
  required string name = 1;
  optional PbAuthorizationDataLayout authorization_data = 2;
  optional string amount = 3;
  optional string locked_address = 4;
}

message PbLockArgsLayout {
  required string name = 1;
  optional PbAuthorizationDataLayout authorization_data = 2;
}

message PbMigrationTypeLayout {
  required string name = 1;
}

message PbMigrateArgsLayout {
  required string name = 1;
  optional PbMigrationTypeLayout migration_type = 2;
  optional string rule_set = 3;
}

message PbMintArgsLayout {
  required string name = 1;
  optional string amount = 2;
  optional PbAuthorizationDataLayout authorization_data = 3;
}

message PbMintNewEditionFromMasterEditionViaTokenArgsLayout {
  required string edition = 1;
}

message PbMintPrintingTokensViaTokenArgsLayout {
  required string supply = 1;
}

message PbRevokeArgsLayout {
  required string name = 1;
}

message PbSetCollectionSizeArgsLayout {
  required string size = 1;
}

message PbReservationLayout {
  required string address = 1;
  required string spotsRemaining = 2;
  required string totalSpots = 3;
}

message PbSetReservationListArgsLayout {
  repeated PbReservationLayout reservations = 1;
  optional string totalReservationSpots = 2;
  required string offset = 3;
  required string totalSpotOffset = 4;
}

message PbTransferArgsLayout {
  required string name = 1;
  optional string amount = 2;
  optional PbAuthorizationDataLayout authorization_data = 3;
}

message PbTransferOutOfEscrowArgsLayout {
  required string amount = 1;
}

message PbUnlockArgsLayout {
  required string name = 1;
  optional PbAuthorizationDataLayout authorization_data = 2;
}

message PbCollectionToggleLayout {
  required string name = 1;
  optional PbCollectionLayout val = 2;
}

message PbCollectionDetailsToggleLayout {
  required string name = 1;
  optional PbCollectionDetailsLayout val = 2;
}

message PbUsesToggleLayout {
  required string name = 1;
  optional PbUsesLayout val = 2;
}

message PbRuleSetToggleLayout {
  required string name = 1;
  optional string val = 2;
}

message PbUpdateArgsLayout {
  required string name = 1;
  optional string new_update_authority = 2;
  optional PbDataLayout data = 3;
  optional bool primary_sale_happened = 4;
  optional bool is_mutable = 5;
  optional PbCollectionToggleLayout collection = 6;
  optional PbCollectionDetailsToggleLayout collection_details = 7;
  optional PbUsesToggleLayout uses = 8;
  optional PbRuleSetToggleLayout rule_set = 9;
  optional PbAuthorizationDataLayout authorization_data = 10;
  optional string token_standard = 11;
}

message PbUpdateMetadataAccountArgsLayout {
  optional PbDataLayout data = 1;
  optional string updateAuthority = 2;
  optional bool primarySaleHappened = 3;
}

message PbUpdateMetadataAccountArgsV2Layout {
  optional PbDataV2Layout data = 1;
  optional string updateAuthority = 2;
  optional bool primarySaleHappened = 3;
  optional bool isMutable = 4;
}

message PbUseArgsLayout {
  required string name = 1;
  optional PbAuthorizationDataLayout authorization_data = 2;
}

message PbUtilizeArgsLayout {
  required string numberOfUses = 1;
}

message PbVerificationArgsLayout {
  required string name = 1;
}

message Arg {
  optional PbApproveUseAuthorityArgsLayout approveUseAuthorityArgs = 1;
  optional PbBurnArgsLayout burnArgs = 2;
  optional PbCreateArgsLayout createArgs = 3;
  optional PbCreateMasterEditionArgsLayout createMasterEditionArgs = 4;
  optional PbCreateMetadataAccountArgsLayout createMetadataAccountArgs = 5;
  optional PbCreateMetadataAccountArgsV2Layout createMetadataAccountArgsV2 = 6;
  optional PbCreateMetadataAccountArgsV3Layout createMetadataAccountArgsV3 = 7;
  optional PbDelegateArgsLayout delegateArgs = 8;
  optional PbLockArgsLayout lockArgs = 9;
  optional PbMigrateArgsLayout migrateArgs = 10;
  optional PbMintArgsLayout mintArgs = 11;
  optional PbMintNewEditionFromMasterEditionViaTokenArgsLayout mintNewEditionFromMasterEditionViaTokenArgs = 12;
  optional PbMintPrintingTokensViaTokenArgsLayout mintPrintingTokensViaTokenArgs = 13;
  optional PbRevokeArgsLayout revokeArgs = 14;
  optional PbSetCollectionSizeArgsLayout setCollectionSizeArgs = 15;
  optional PbSetReservationListArgsLayout setReservationListArgs = 16;
  optional PbTransferArgsLayout transferArgs = 17;
  optional PbTransferOutOfEscrowArgsLayout transferOutOfEscrowArgs = 18;
  optional PbUnlockArgsLayout unlockArgs = 19;
  optional PbUpdateArgsLayout updateArgs = 20;
  optional PbUpdateMetadataAccountArgsLayout updateMetadataAccountArgs = 21;
  optional PbUpdateMetadataAccountArgsV2Layout updateMetadataAccountArgsV2 = 22;
  optional PbUseArgsLayout useArgs = 23;
  optional PbUtilizeArgsLayout utilizeArgs = 24;
  optional PbVerificationArgsLayout verificationArgs = 25;
  required string instruction_type = 26;
}

message InputAccounts {
  optional string ataProgram = 1;
  optional string attributeDst = 2;
  optional string attributeMint = 3;
  optional string attributeSrc = 4;
  optional string authority = 5;
  optional string authorizationRules = 6;
  optional string authorizationRulesProgram = 7;
  optional string bubblegumSigner = 8;
  optional string burnAuthority = 9;
  optional string burner = 10;
  optional string collection = 11;
  optional string collectionAuthority = 12;
  optional string collectionAuthorityRecord = 13;
  optional string collectionMasterEdition = 14;
  optional string collectionMasterEditionAccount = 15;
  optional string collectionMetadata = 16;
  optional string collectionMint = 17;
  optional string creator = 18;
  optional string delegate = 19;
  optional string delegateAuthority = 20;
  optional string delegateRecord = 21;
  optional string destination = 22;
  optional string destinationOwner = 23;
  optional string destinationTokenRecord = 24;
  optional string edition = 25;
  optional string editionMarkPda = 26;
  optional string editionMarker = 27;
  optional string editionMarkerAccount = 28;
  optional string escrow = 29;
  optional string escrowAccount = 30;
  optional string escrowMint = 31;
  optional string masterEdition = 32;
  optional string masterEditionAccount = 33;
  optional string masterEditionMint = 34;
  optional string masterEditionToken = 35;
  optional string masterEditionTokenAccount = 36;
  optional string masterMetadata = 37;
  optional string masterTokenAccount = 38;
  optional string masterUpdateAuthority = 39;
  optional string metadata = 40;
  optional string mint = 41;
  optional string mintAuthority = 42;
  optional string newCollectionAuthority = 43;
  optional string newEdition = 44;
  optional string newMetadata = 45;
  optional string newMetadataUpdateAuthority = 46;
  optional string newMint = 47;
  optional string newMintAuthority = 48;
  optional string oneTimeAuth = 49;
  optional string oneTimePrintingAuthorizationMint = 50;
  optional string oneTimePrintingAuthorizationMintAuthority = 51;
  optional string owner = 52;
  optional string ownerTokenAccount = 53;
  optional string ownerTokenRecord = 54;
  optional string payer = 55;
  optional string pdaAccount = 56;
  optional string printEditionAccount = 57;
  optional string printEditionMint = 58;
  optional string printEditionTokenAccount = 59;
  optional string printingMint = 60;
  optional string printingMintAuthority = 61;
  optional string rent = 62;
  optional string reservationList = 63;
  optional string resource = 64;
  optional string revokeAuthority = 65;
  optional string safetyDepositBox = 66;
  optional string safetyDepositStore = 67;
  optional string splAtaProgram = 68;
  optional string splTokenProgram = 69;
  optional string systemProgram = 70;
  optional string sysvarInstructions = 71;
  optional string token = 72;
  optional string tokenAccount = 73;
  optional string tokenAccountOwner = 74;
  optional string tokenOwner = 75;
  optional string tokenProgram = 76;
  optional string tokenRecord = 77;
  optional string tokenVaultProgram = 78;
  optional string updateAuthority = 79;
  optional string useAuthority = 80;
  optional string useAuthorityRecord = 81;
  optional string user = 82;
  optional string vault = 83;
  optional string vaultAuthority = 84;
}

message TokenMetadataMeta {
  required string block_date = 1;
  required int64 block_time = 2;
  required string tx_id = 3;
  required string dapp = 4;
  required uint64 block_slot = 5;
  required uint32 instruction_index = 7;
  required bool is_inner_instruction = 8;
  required uint32 inner_instruction_index = 9;
  required string instruction_type = 10;
  required Arg args = 11;
  required InputAccounts input_accounts = 12;
}

message Output {
  repeated TokenMetadataMeta data = 1;
}